src/App.scss
body {
  margin: 0;
  padding: 0;
}

div.Carousel-Container {
  width: 100%;
  height: auto;
  overflow: hidden;
  display: flex;
  align-items: center;
}
div.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

.Slide-Container,
.Slide-Container > div {
  height: auto;
  display: flex;
  align-items: center;
}

.Slides {
  //   left: 100%;
}

.Slider-Content {
  width: 100%;
  img {
    width: 100%;
  }
}

.buttonContainer {
  position: absolute;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  height: 100%;
}

.buttonBack {
  right: 0px;
}

.buttonBack,
.buttonNext {
  width: 100px;
  padding: 0;
  position: absolute;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.1);
  border: none;
  svg {
    stroke: black;
  }
  height: 100%;
  &:hover {
    cursor: pointer;
  }
}

